Version history: 0.85
 * Fix bug where packages are built in reverse order. :-(
 * Show output when packages build successfully but fail on installation.
 * Don't show Packages Successfully Built if none were.
 * Fix bug where make-install-prefix no longer works.

Version history: 0.84
 * Show failed updates in summary output.
 * You can now update or build only part of a module directly from the command line.
 * Log command outputs the command it's logging in debug mode.

Version history: 0.83
 * Added option, --ignore-modules.

Version history: 0.82
 * Add hack to make kdebindings build using builddir == srcdir even though
   srcdir is really != builddir.  Unfortunately, kdebindings still won't
   build, but it gets a little farther into the build process.
 * kdecvs-pywizard improvements.
 * Add hack to make valgrind build.  Unlike kdebindings, this one actually
   completes now.
 * Show how many modules have been built out of the total number of modules,
   based loosely on a suggestion by David Saxton.

Version history: 0.81
 * Fix use-qt-builddir-hack to work on the second and subsequent runs.
 * Add a warning if you're using qt-copy but qtdir isn't set to use qt-copy

Version history: 0.80
 * Fixed an output quibble discovered by Michal Rokos
 * Added set-env config option.

Version history: 0.77
 * Added inst-apps config option.

Version history: 0.76
 * Added --cvs-only option.
 * Added --build-only option.
 * --help output updates.

Version history: 0.75
 * Add signal handler for SIGPIPE to stop less from aborting the script prematurely.
 * Silence warnings when the script informs you that you're missing the conf file.
 * Try to build modules even if one failed in the update process.
 * Added --rc-file option.
 * Make --debug option use logging in addition to dumping to stdout.

Version history: 0.74
 * Fixed bug processing command line options where --help would call the wrong
   exit routine, leading to some warnings.  I had a fix for this myself, but