@@ -65,7 +65,16 @@ those who either can't or don't feel like installing it.</p>
 <p id="emailaddy">It is authored by Michael Pyne (mpyne (AT) grammarian (DOT) homelinux 
 (DOT) net), and is one of several build scripts for this purpose.</p>
 
-<p><b>2004-Sep-19:</b> v0.85<br/>
+<p><b>2004-Sep-20:</b> v0.85<br/>
+New features:
+<ul>
+<li>kdecvs-pywizard, the include PyQt-based configuration wizard, has been
+tweaked a little.  The catch, of course, is that you must already have both
+Qt and PyQt installed.  You may want to consider the <a
+href="http://grammarian.homelinux.net/cgi-bin/kdecvs-build-wizard">online
+configuration wizard</a></li>
+</ul>
+
 Bugfixes:
 <ul>
 <li>Modules build in the correct order again.</li>
