@@ -3,6 +3,7 @@ Version history: 0.85
  * Show output when packages build successfully but fail on installation.
  * Don't show Packages Successfully Built if none were.
  * Fix bug where make-install-prefix no longer works.
+ * Tweak kdecvs-pywizard
 
 Version history: 0.84
  * Show failed updates in summary output.
